--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-     <title>Ben's Resume - Profile HTML Page</title>
+     <title>Its Game Man</title>
 
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=Edge">
@@ -90,14 +90,11 @@ https://www.tooplate.com/view/2120-ben-resume
                             <div class="item">
                                 <div class="testimonials-thumb d-flex">
                                     <div class="testimonials-image">
-                                        <img src="images/testimonials/testimonial-image01.jpg" class="img-fluid" alt="testimonials image">
+                                        <img src="images/itsgameman.jpg" class="img-fluid" alt="testimonials image">
                                     </div>
 
                                     <div class="testimonials-info">
-                                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem.</p>
-
-                                        <h6 class="mb-0">Ben</h6>
-                                        <span>Art Director</span>
+                                        <h6 class="mb-0">Its Game Man</h6>
                                     </div>
                                 </div>
                             </div>
@@ -258,34 +255,8 @@ https://www.tooplate.com/view/2120-ben-resume
      <section class="contact section-padding pt-0" id="contact">
       <div class="container">
         <div class="row">
-
-          <div class="col-lg-6 col-md-6 col-12">
-            <form action="#" method="get" class="contact-form webform"  role="form">
-                
-                <div class="form-group d-flex flex-column-reverse">
-                    <input type="text" class="form-control" name="cf-name" id="cf-name" placeholder="Your Name">
-                    <label for="cf-name" class="webform-label">Full Name</label>
-                </div>
-                <div class="form-group d-flex flex-column-reverse">
-                    <input type="email" class="form-control" name="cf-email" id="cf-email" placeholder="Your Email">
-                    <label for="cf-email" class="webform-label">Your Email</label>
-                </div>
-                <div class="form-group d-flex flex-column-reverse">
-                    <textarea class="form-control" rows="5" name="cf-message" id="cf-message" placeholder="Your Message"></textarea>
-                    <label for="cf-message" class="webform-label">Message</label>
-                </div>
-                <button type="submit" class="form-control" id="submit-button" name="submit">Send</button>
-            </form>
-          </div>
             <div class="mx-auto col-lg-4 col-md-6 col-12">
-            	<center>
-                <ul class="social-links mt-2">
-                    <li><a href="https://fb.com/tooplate" rel="noopener" class="fab fa-facebook"></a></li>
-                    <li><a href="#" rel="noopener" class="fab fa-twitter"></a></li>
-                    <li><a href="#" rel="noopener" class="fab fa-instagram"></a></li>
-                    <li><a href="#" rel="noopener" class="fab fa-linkedin"></a></li>
-                    <li><a href="#" rel="noopener" class="fab fa-youtube"></a></li>
-                </ul>
+          	<center>
               <p class="copyright-text mt-5 pt-3">Copyright &copy; 2024 Its Game Man</p>
               </center>
             </div>
