--- a/index.html
+++ b/index.html
@@ -61,23 +61,7 @@ https://www.tooplate.com/view/2120-ben-resume
     </nav>
     
     <!-- HERO -->
-    <section class="hero d-flex flex-column justify-content-center align-items-center" id="intro">
-         <div class="container">
-            <div class="row">
-                  <div class="mx-auto col-lg-5 col-md-5 col-10">
-                      <img src="images/ben.jpg" class="img-fluid" alt="Its Game Man HTML Template">
-                  </div>
-                   <div class="d-flex flex-column justify-content-center align-items-center col-lg-7 col-md-7 col-12">
-                        <div class="hero-text">
-                            <h1 class="hero-title">👋 Ben, a digital nomad</h1>
-                            <a href="#" class="email-link">
-                                hello@company.co
-                            </a>
-                        </div>
-                    </div>
-            </div>
-        </div>
-    </section>
+    
     <!-- TESTIMONIAL -->
      <section class="testimonials section-padding" id="testimonials">
           <div class="container">
@@ -160,15 +144,13 @@ https://www.tooplate.com/view/2120-ben-resume
             <div class="row">
 
                 <div class="col-lg-12 col-12">
-
-                    <h3 class="mb-5">Frequently Asked Questions</h3>
-
+                    <h3 class="mb-5 text-center">Join Airdrop Telegram</h3>
                     <div class="accordion" id="accordionExample">
                       <div class="card">
                         <div class="card-header" id="headingOne">
                           <h2 class="mb-0">
                             <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                              Are those HTML templates absolutely free for any kind of usage?
+                              Hamster Kombat
                             </button>
                           </h2>
                         </div>
@@ -186,7 +168,7 @@ https://www.tooplate.com/view/2120-ben-resume
                         <div class="card-header" id="headingTwo">
                           <h2 class="mb-0">
                             <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                              Can I use them as a CMS theme or a part of website builder?
+                              TapSwap
                             </button>
                           </h2>
                         </div>
@@ -201,7 +183,7 @@ https://www.tooplate.com/view/2120-ben-resume
                         <div class="card-header" id="headingThree">
                           <h2 class="mb-0">
                             <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                              I cannot find a suitable HTML template. Can I request new template?
+                              Pixelverse
                             </button>
                           </h2>
                         </div>
@@ -216,7 +198,7 @@ https://www.tooplate.com/view/2120-ben-resume
                         <div class="card-header" id="headingFour">
                           <h2 class="mb-0">
                             <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                              Can I redistribute your templates?
+                              BlumCrypto
                             </button>
                           </h2>
                         </div>
@@ -231,7 +213,7 @@ https://www.tooplate.com/view/2120-ben-resume
                         <div class="card-header" id="headingFive">
                           <h2 class="mb-0">
                             <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-                              How do I support Tooplate?
+                              Catizen
                             </button>
                           </h2>
                         </div>
