--- a/index.html
+++ b/index.html
@@ -33,9 +33,7 @@ https://www.tooplate.com/view/2120-ben-resume
                <div class="row">
 
                     <div class="col-12">
-                        <h3 class="mb-5 text-center">What People say</h3>
-
-                        <div class="owl-carousel owl-theme" id="testimonials-carousel">
+                           <div class="owl-carousel owl-theme" id="testimonials-carousel">
                             <div class="item">
                                 <div class="testimonials-thumb d-flex">
                                     <div class="testimonials-image">
@@ -43,67 +41,21 @@ https://www.tooplate.com/view/2120-ben-resume
                                     </div>
 
                                     <div class="testimonials-info">
-                                    	<p></p>
+                                    	<p>Selamat datang di</p>
                                         <h6 class="mb-0">Its Game Man</h6>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="item">
-                                <div class="testimonials-thumb d-flex">
-                                    <div class="testimonials-image">
-                                        <img src="images/testimonials/testimonial-image02.jpg" class="img-fluid" alt="testimonials image">
-                                    </div>
-
-                                    <div class="testimonials-info">
-                                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem.</p>
-
-                                        <h6 class="mb-0">Marie</h6>
-                                        <span>Marketing Consultant</span>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="item">
-                                <div class="testimonials-thumb d-flex">
-                                    <div class="testimonials-image">
-                                        <img src="images/testimonials/testimonial-image03.jpg" class="img-fluid" alt="testimonials image">
-                                    </div>
-
-                                    <div class="testimonials-info">
-                                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem.</p>
-
-                                        <h6 class="mb-0">Jen</h6>
-                                        <span>Product Manager</span>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="item">
-                                <div class="testimonials-thumb d-flex">
-                                    <div class="testimonials-image">
-                                        <img src="images/testimonials/testimonial-image04.jpg" class="img-fluid" alt="testimonials image">
-                                    </div>
-
-                                    <div class="testimonials-info">
-                                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem.</p>
-
-                                        <h6 class="mb-0">Wilson</h6>
-                                        <span>Web Developer</span>
+                                        <span>Portal</span>
                                     </div>
                                 </div>
                             </div>
                         </div>
-
                     </div>
-
                </div>
           </div>
      </section>
 
 
      <!-- FAQ -->
-     <section class="faq section-padding">
+     <section class="testimonials section-padding" id="testimonials">
         
         <div class="container">
             
