--- a/index.html
+++ b/index.html
@@ -39,11 +39,10 @@ https://www.tooplate.com/view/2120-ben-resume
                                     <div class="testimonials-image">
                                         <img src="images/itsgameman.jpg" class="img-fluid" alt="testimonials image">
                                     </div>
-
                                     <div class="testimonials-info">
-                                    	<p>Selamat datang di</p>
-                                        <h6 class="mb-0">Its Game Man</h6>
-                                        <span>Portal</span>
+                                    	<p style="color:white;">Selamat datang di</p>
+                                        <h6 class="mb-0" style="color:white;">Its Game Man</h6>
+                                        <span style="color:white;">Portal</span>
                                     </div>
                                 </div>
                             </div>
