--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ https://www.tooplate.com/view/2120-ben-resume
      <!-- FAQ -->
      <section class="faq section-padding">
         
-        <div class="container">
+        <div class="container" style="background:#0C0819;">
             
             <div class="row">
 
