--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ https://www.tooplate.com/view/2120-ben-resume
 -->
 </head>
 
-<body data-spy="scroll" data-target="#navbarNav" data-offset="50">
+<body style="background:#0C0819;" data-spy="scroll" data-target="#navbarNav" data-offset="50">
 
   
     <!-- TESTIMONIAL -->
