--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ https://www.tooplate.com/view/2120-ben-resume
             <div class="row">
 
                 <div class="col-lg-12 col-12">
-                    <h3 class="mb-5 text-center">Join Airdrop Telegram</h3>
+                    <h3 class="mb-5 text-center" style="color:white;">Join Airdrop Telegram</h3>
                     <div class="accordion" id="accordionExample">
                       <div class="card">
                         <div class="card-header" id="headingOne">
@@ -142,7 +142,7 @@ https://www.tooplate.com/view/2120-ben-resume
                         </div>
                     </div>
 
-                    <span class="faq-info-text">Please send us a message if you have anything to say. Send an email message to <strong>contact (at) tooplate (dot) com</strong></span>
+     
 
                 </div>
 
@@ -157,7 +157,7 @@ https://www.tooplate.com/view/2120-ben-resume
         <div class="row">
             <div class="mx-auto col-lg-4 col-md-6 col-12">
           	<center>
-              <p class="copyright-text mt-5 pt-3">Copyright &copy; 2024 Its Game Man</p>
+              <p class="copyright-text mt-5 pt-3" style="color:white;">Copyright &copy; 2024 Its Game Man</p>
               </center>
             </div>
         </div>
