--- a/index.html
+++ b/index.html
@@ -62,6 +62,18 @@ https://www.tooplate.com/view/2120-ben-resume
             <div class="row">
 
                 <div class="col-lg-12 col-12">
+                	<div class="item">
+                                <div class="testimonials-thumb d-flex">
+                                    <div class="testimonials-image">
+                                        <img src="images/itsgameman.jpg" class="img-fluid" alt="testimonials image">
+                                    </div>
+                                    <div class="testimonials-info">
+                                    	<p style="color:white;">Selamat datang di</p>
+                                        <h6 class="mb-0" style="color:white;">Its Game Man</h6>
+                                        <span style="color:white;">Portal</span>
+                                    </div>
+                                </div>
+                            </div>
                     <h3 class="mb-5 text-center" style="color:white;">Join Airdrop Telegram</h3>
                     <div class="accordion" id="accordionExample">
                       <div class="card">
