--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@ https://www.tooplate.com/view/2120-ben-resume
                                         <img src="images/itsgameman.jpg" class="img-fluid" alt="testimonials image">
                                     </div>
                                     <div class="testimonials-info">
-                                    	
-                                        <h3 class="mb-0" style="color:white;">Its Game Man</h6>
+                                    	<p style="color:white;">Selamat datang di</p>
+                                        <h6 class="mb-0" style="color:white;">Its Game Man</h6>
                                         <span style="color:white;">Portal</span>
                                     </div>
                                 </div>
