--- a/index.html
+++ b/index.html
@@ -45,8 +45,17 @@ https://www.tooplate.com/view/2120-ben-resume
                                     </div>
                                 </div>
                             </div>
+                            </br></br>
                     <h3 class="mb-5 text-center" style="color:white;">Join Airdrop Telegram</h3>
-                    <div class="accordion" id="accordionExample">
+                  <div class="hero-text">
+
+                <a href="#" class="email-link">
+                                Hamster Kombat
+                            </a>
+                          
+                        </div>
+  <div class="accordion" id="accordionExample">
+                    	
                       <div class="card">
                         <div class="card-header" id="headingOne">
                           <h2 class="mb-0">
