--- a/index.html
+++ b/index.html
@@ -26,13 +26,16 @@ https://www.tooplate.com/view/2120-ben-resume
 
 <body style="background:#0C0819;" data-spy="scroll" data-target="#navbarNav" data-offset="50">
      <div class="col-lg-12 col-12">
+     	<div class="testimonials-image">
+                <center><img src="images/itsgameman.jpg" class="img-fluid"></center>
+         </div>
                 	<div class="item">
                                 <div class="testimonials-thumb d-flex">
                                     <div class="testimonials-image">
                                         <img src="images/itsgameman.jpg" class="img-fluid" alt="testimonials image">
                                     </div>
                                     <div class="testimonials-info">
-                                    	
+         
                                         <h6 class="mb-0" style="color:white;">Its Game Man</h6>
                                         <span style="color:white;">Portal</span>
                                     </div>
