--- a/index.html
+++ b/index.html
@@ -27,8 +27,13 @@ https://www.tooplate.com/view/2120-ben-resume
 <body style="background:#0C0819;" data-spy="scroll" data-target="#navbarNav" data-offset="50">
      <div class="col-lg-12 col-12">
      	<div class="testimonials-image">
-                <center><img src="images/itsgameman.jpg" class="img-fluid"></center>
+                <img src="images/itsgameman.jpg" class="img-fluid">
          </div>
+         <div class="testimonials-info">
+         
+                                        <h6 class="mb-0" style="color:white;">Its Game Man</h6>
+                                        
+                                    </div>
                 	<div class="item">
                                 <div class="testimonials-thumb d-flex">
                                     <div class="testimonials-image">
