--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
      <meta name="author" content="Its Game Man">
      <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 </head>
-<body style="background:#0C0819;">
+<body style="background:#0D1117;">
 </body>
 </html>
