--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
      <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 </head>
 <body style="background:#0D1117;">
-	<img src="/images/logo.png" alt="Its Game Man Logo" style="width:100%">
+	<img src="/images/logo.png" alt="Its Game Man Logo" style="width:200px">
 </body>
 </html>
