--- a/index.html
+++ b/index.html
@@ -8,8 +8,16 @@
      <meta name="keywords" content="">
      <meta name="author" content="Its Game Man">
      <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+     <style>
+   	.img-logo {
+          display: block;
+          margin-left: auto;
+          margin-right: auto;
+          width: 100%;
+        }
+     </style>
 </head>
 <body style="background:#0D1117;">
-	<img src="/images/logo.png" alt="Its Game Man Logo" style="width:200px">
+	<img src="images/logo.png" alt="Its Game Man Logo" class="img-logo">
 </body>
 </html>
