--- a/index.html
+++ b/index.html
@@ -13,11 +13,45 @@
           display: block;
           margin-left: auto;
           margin-right: auto;
-          width: 100%;
+          width: 50%;
         }
      </style>
 </head>
 <body style="background:#0D1117;">
 	<img src="images/logo.png" alt="Its Game Man Logo" class="img-logo">
+	<div class="w-full h-full flex justify-center items-center">
+    <h1 id="typewriter" class="text-4xl font-bold"></h1>
+</div>
 </body>
+<script>
+const words = ["Halo", "Selamat datang!"];
+let i = 0;
+let j = 0;
+let currentWord = "";
+let isDeleting = false;
+
+function type() {
+  currentWord = words[i];
+  if (isDeleting) {
+    document.getElementById("typewriter").textContent = currentWord.substring(0, j-1);
+    j--;
+    if (j == 0) {
+      isDeleting = false;
+      i++;
+      if (i == words.length) {
+        i = 0;
+      }
+    }
+  } else {
+    document.getElementById("typewriter").textContent = currentWord.substring(0, j+1);
+    j++;
+    if (j == currentWord.length) {
+      isDeleting = true;
+    }
+  }
+  setTimeout(type, 100);
+}
+
+type();
+</script>
 </html>
