--- a/index.html
+++ b/index.html
@@ -13,14 +13,18 @@
           display: block;
           margin-left: auto;
           margin-right: auto;
-          width: 50%;
+          width: 200px;
         }
+        .tty {
+        	color: #ffffff;
+            text-align: center;
+    	}
      </style>
 </head>
 <body style="background:#0D1117;">
 	<img src="images/logo.png" alt="Its Game Man Logo" class="img-logo">
 	<div class="w-full h-full flex justify-center items-center">
-    <h1 id="typewriter" class="text-4xl font-bold"></h1>
+        <h1 class="tty" id="typewriter" class="text-4xl font-bold"></h1>
 </div>
 </body>
 <script>
