--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
           display: block;
           margin-left: auto;
           margin-right: auto;
-          width: 200px;
+          width: 100px;
         }
         .tty {
-        	color: #ffffff;
+        	color: #0471FF;
             text-align: center;
     	}
      </style>
