--- a/index.html
+++ b/index.html
@@ -19,11 +19,20 @@
         	color: #0471FF;
             text-align: center;
     	}
+    @font-face {
+   font-family: myFirstFont;
+   src: url(/localfonts/Plain-Bold.woff);
+}
+
+.ft {
+   font-family: myFirstFont;
+}
      </style>
 </head>
 <body style="background:#0D1117;">
 	<img src="images/logo.png" alt="Its Game Man Logo" class="img-logo">
-	<div class="w-full h-full flex justify-center items-center">
+	<h class="ft">Hallo</h>
+<div class="w-full h-full flex justify-center items-center">
         <h1 class="tty" id="typewriter" class="text-4xl font-bold"></h1>
 </div>
 </body>
