--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     	}
     @font-face {
    font-family: myFirstFont;
-   src: url(/localfonts/Plain-Bold.woff);
+   src: url('/localfonts/Plain-Bold.woff');
 }
 
 .ft {
