--- a/index.html
+++ b/index.html
@@ -10,31 +10,27 @@
      <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
      <style>
    	.img-logo {
-          display: block;
           margin-left: auto;
           margin-right: auto;
-          width: 100px;
+          width: 50px;
         }
         .tty {
         	color: #0471FF;
             text-align: center;
     	}
-    @font-face {
-   font-family: myFirstFont;
-   src: url('/localfonts/Plain-Bold.woff');
-}
-
-.ft {
-   font-family: myFirstFont;
-}
+       @font-face {
+           font-family: myFirstFont;
+           src: url('/localfonts/Plain-Bold.woff');
+        }
+      .ft {
+           font-family: myFirstFont;
+           color: #0471FF;
+       }
      </style>
 </head>
 <body style="background:#0D1117;">
 	<img src="images/logo.png" alt="Its Game Man Logo" class="img-logo">
-	<h class="ft">Hallo</h>
-<div class="w-full h-full flex justify-center items-center">
-        <h1 class="tty" id="typewriter" class="text-4xl font-bold"></h1>
-</div>
+	<h class="ft">Halo... Selamat datang!</h>
 </body>
 <script>
 const words = ["Halo", "Selamat datang!"];
