--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
        @font-face {
            font-family: myFirstFont;
            src: url('/localfonts/Plain-Bold.woff');
+           font-weight: 300;
+           font-style: normal;
         }
       .ft {
            font-family: myFirstFont;
@@ -29,8 +31,10 @@
      </style>
 </head>
 <body style="background:#0D1117;">
-	<img src="images/logo.png" alt="Its Game Man Logo" class="img-logo">
+	<center>
+    <img src="images/logo.png" alt="Its Game Man Logo" style="width: 100%;">
 	<h class="ft">Halo... Selamat datang!</h>
+	</center>
 </body>
 <script>
 const words = ["Halo", "Selamat datang!"];
