--- a/index.html
+++ b/index.html
@@ -9,11 +9,6 @@
      <meta name="author" content="Its Game Man">
      <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
      <style>
-   	.img-logo {
-          margin-left: auto;
-          margin-right: auto;
-          width: 50px;
-        }
         .tty {
         	color: #0471FF;
             text-align: center;
@@ -21,18 +16,28 @@
        @font-face {
            font-family: myFirstFont;
            src: url('/localfonts/Plain-Bold.woff');
-           font-weight: 300;
+           font-weight: 450;
+           font-style: normal;
+        }
+        @font-face {
+           font-family: myFont;
+           src: url('/localfonts/Plain-Bold.woff');
+           font-weight: 250;
            font-style: normal;
         }
       .ft {
            font-family: myFirstFont;
            color: #0471FF;
        }
+       .ft2 {
+           font-family: myFont;
+           color: #ffffff;
+       }
      </style>
 </head>
 <body style="background:#0D1117;">
 	<center>
-    <img src="images/logo.png" alt="Its Game Man Logo" style="width: 100%;">
+    <img src="images/logo.png" alt="Its Game Man Logo" style="width:100%;">
 	<h class="ft">Halo... Selamat datang!</h>
 	</center>
 </body>
