--- a/index.html
+++ b/index.html
@@ -9,6 +9,37 @@
      <meta name="author" content="Its Game Man">
      <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
      <style>
+     	@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Koulen&family=Lato&family=Nunito&family=Playfair+Display:ital@1&family=Prata&family=Raleway:ital,wght@1,100&family=Roboto&family=Roboto+Condensed&family=Teko&display=swap');
+
+.btn{
+
+font-family: Koulen;
+font-weight: 900;
+font-size: 14px;
+color: #fff;
+background-color: #121d2f;
+padding: 10px 30px;
+border: solid #4493f8 1px;
+box-shadow: rgb(0, 0, 0) 0px 0px 0px 0px;
+border-radius: 7px;
+transition : 1000ms;
+transform: translateY(0);
+display: flex;
+flex-direction: row;
+align-items: center;
+cursor: pointer;
+text-transform: lowercase;
+}
+
+.btn:hover{
+
+transition : 1000ms;
+padding: 10px 50px;
+transform : translateY(-0px);
+background-color: #121d2f;
+color: #ffffff;
+border: solid 1px #0066cc;
+}
         .tty {
         	color: #0471FF;
             text-align: center;
@@ -37,8 +68,11 @@
 </head>
 <body style="background:#0D1117;">
 	<center>
-    <img src="images/logo.png" alt="Its Game Man Logo" style="width:50%;">
+    <img src="images/logo.png" alt="Its Game Man Logo" style="width:100%;">
+    </br>
 	<h class="ft">Halo... Selamat datang!</h>
+	</br>
+	<button class="btn">Hamster Kombat</button>
 	</center>
 </body>
 <script>
