--- a/index.html
+++ b/index.html
@@ -68,9 +68,12 @@ border: solid 1px #0066cc;
 </head>
 <body style="background:#0D1117;">
 	<center>
-    <img src="images/logo.png" alt="Its Game Man Logo" style="width:100%;">
+    <img src="images/logo.png" alt="Its Game Man Logo" style="width:80%;">
     </br>
 	<h class="ft">Halo... Selamat datang!</h>
+	</br>
+	</br>
+	<h class="ft2">Join Airdrop Telegram</h>
 	</br>
 	<button class="btn">Hamster Kombat</button>
 	</center>
