--- a/index.html
+++ b/index.html
@@ -70,12 +70,17 @@ border: solid 1px #0066cc;
 	<center>
     <img src="images/logo.png" alt="Its Game Man Logo" style="width:80%;">
     </br>
-	<h class="ft">Halo... Selamat datang!</h>
+	<h1 class="ft">Halo... Selamat datang!</h1>
 	</br>
 	</br>
-	<h class="ft2">Join Airdrop Telegram</h>
+	<h2 class="ft2">Join Airdrop Telegram</h2>
+	</br>
 	</br>
 	<button class="btn">Hamster Kombat</button>
+	<button class="btn">TapSwap</button>
+	<button class="btn">Pixelverse</button>
+	<button class="btn">BlumCrypto</button>
+	<button class="btn">Catizen</button>
 	</center>
 </body>
 <script>
