--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
 
 .btn{
 
-font-family: Koulen;
+font-family: Roboto;
 font-weight: 900;
+width:200px;
 font-size: 14px;
 color: #fff;
 background-color: #121d2f;
