--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 .btn{
 
-font-family: Roboto;
+font-family: Koulen;
 font-weight: 900;
 width:200px;
 font-size: 14px;
@@ -76,7 +76,6 @@ border: solid 1px #0066cc;
 	</br>
 	<h2 class="ft2">Join Airdrop Telegram</h2>
 	</br>
-	</br>
 	<button class="btn">Hamster Kombat</button>
 	</br>
 	<button class="btn">TapSwap</button>
@@ -86,6 +85,8 @@ border: solid 1px #0066cc;
 	<button class="btn">BlumCrypto</button>
 	</br>
 	<button class="btn">Catizen</button>
+	</br>
+	</br>
 	</center>
 </body>
 <script>
