--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 font-family: Koulen;
 font-weight: 900;
-width:200px;
+width:180px;
 font-size: 14px;
 color: #fff;
 background-color: #121d2f;
@@ -84,8 +84,11 @@ border: solid 1px #0066cc;
 	</br>
 	<button class="btn">BlumCrypto</button>
 	</br>
-	<button class="btn">Catizen</button>
+	<button class="btn"><a href="default.asp" target="_blank">This is a link</a></button>
 	</br>
+	</br>
+	</br>
+	<p class="ft2">Copyright 2024 by Its Game Man</p>
 	</br>
 	</center>
 </body>
