--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ border: solid 1px #0066cc;
 	</br>
 	<button class="btn">BlumCrypto</button>
 	</br>
-	<button class="btn"><a href="default.asp" target="_blank">This is a link</a></button>
+	<a href="default.asp" target="_blank"><button class="btn">Catizen</button></a>
 	</br>
 	</br>
 	</br>
