--- a/index.html
+++ b/index.html
@@ -76,51 +76,29 @@ border: solid 1px #0066cc;
 	</br>
 	<h2 class="ft2">Join Airdrop Telegram</h2>
 	</br>
-	<button class="btn">Hamster Kombat</button>
+	<a href="https://t.me/hamsteR_kombat_bot/start?startapp=kentId666159099">
+        <button class="btn">Hamster Kombat</button>
+    </a>
 	</br>
-	<button class="btn">TapSwap</button>
+	<a href="http://t.me/BlumCryptoBot/app?startapp=ref_Z8w8cnHS47">
+        <button class="btn">BlumCrypto</button>
+    </a>
 	</br>
-	<button class="btn">Pixelverse</button>
+	<a href="https://t.me/tapswap_mirror_1_bot?start=r_666159099">
+        <button class="btn">TapSwap</button>
+    </a>
 	</br>
-	<button class="btn">BlumCrypto</button>
+	<a href="https://t.me/pixelversexyzbot?start=666159099">
+        <button class="btn">Pixelverse</button>
+    </a>
 	</br>
-	<a href="default.asp" target="_blank"><button class="btn">Catizen</button></a>
+	<a href="https://t.me/catizenbot/gameapp?startapp=rp_24967862">
+        <button class="btn">Catizen</button>
+    </a>
 	</br>
 	</br>
 	</br>
-	<p class="ft2">Copyright 2024 by Its Game Man</p>
-	</br>
+	<h4 class="ft2">Copyright 2024 by Its Game Man</h4>
 	</center>
 </body>
-<script>
-const words = ["Halo", "Selamat datang!"];
-let i = 0;
-let j = 0;
-let currentWord = "";
-let isDeleting = false;
-
-function type() {
-  currentWord = words[i];
-  if (isDeleting) {
-    document.getElementById("typewriter").textContent = currentWord.substring(0, j-1);
-    j--;
-    if (j == 0) {
-      isDeleting = false;
-      i++;
-      if (i == words.length) {
-        i = 0;
-      }
-    }
-  } else {
-    document.getElementById("typewriter").textContent = currentWord.substring(0, j+1);
-    j++;
-    if (j == currentWord.length) {
-      isDeleting = true;
-    }
-  }
-  setTimeout(type, 100);
-}
-
-type();
-</script>
 </html>
