--- a/index.html
+++ b/index.html
@@ -65,6 +65,11 @@ border: solid 1px #0066cc;
            font-family: myFont;
            color: #ffffff;
        }
+       .ft3 {
+           font-family: myFont;
+           color: #ffffff;
+           font-size: 8px;
+       }
      </style>
 </head>
 <body style="background:#0D1117;">
@@ -98,7 +103,7 @@ border: solid 1px #0066cc;
 	</br>
 	</br>
 	</br>
-	<h4 class="ft2">Copyright 2024 by Its Game Man</h4>
+	<h4 class="ft3">Copyright 2024 by Its Game Man</h4>
 	</center>
 </body>
 </html>
