--- a/index.html
+++ b/index.html
@@ -64,12 +64,50 @@ border: solid 1px #0066cc;
        .ft2 {
            font-family: myFont;
            color: #ffffff;
+           font-size: 16px;
        }
        .ft3 {
            font-family: myFont;
            color: #ffffff;
            font-size: 8px;
        }
+       .social-icons{
+	padding:30px;
+	background-color:#00506b;
+  text-align: center;
+}
+.social-icons a{
+	color:#fff;
+  line-height:30px;
+  font-size:30px;
+  margin: 0 5px;
+  text-decoration:none;
+  
+}
+.social-icons a i{
+	line-height:30px;
+  font-size:30px;
+  -webkit-transition: all 200ms ease-in;
+  -webkit-transform: scale(1); 
+  -ms-transition: all 200ms ease-in;
+  -ms-transform: scale(1); 
+  -moz-transition: all 200ms ease-in;
+  -moz-transform: scale(1);
+  transition: all 200ms ease-in;
+  transform: scale(1);
+}
+.social-icons a:hover i{
+  box-shadow: 0px 0px 150px #000000;
+  z-index: 2;
+  -webkit-transition: all 200ms ease-in;
+  -webkit-transform: scale(1.5);
+  -ms-transition: all 200ms ease-in;
+  -ms-transform: scale(1.5);   
+  -moz-transition: all 200ms ease-in;
+  -moz-transform: scale(1.5);
+  transition: all 200ms ease-in;
+  transform: scale(1.5);
+}
      </style>
 </head>
 <body style="background:#0D1117;">
@@ -78,6 +116,14 @@ border: solid 1px #0066cc;
     </br>
 	<h1 class="ft">Halo... Selamat datang!</h1>
 	</br>
+	<div class="social-icons">
+  <a href="#"  title="facebook"> 
+    <i class="fa fa-employe" aria-hidden="true"></i>
+  </a>
+  <a href="#" title="youtube">
+    <i class="fa fa-youtube-square" aria-hidden="true"></i>
+  </a>
+</div>
 	</br>
 	<h2 class="ft2">Join Airdrop Telegram</h2>
 	</br>
