--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@ border: solid 1px #0066cc;
 }
 .social-icons a{
 	color:#fff;
-  line-height:30px;
-  font-size:30px;
+  line-height:50px;
+  font-size:50px;
   margin: 0 5px;
   text-decoration:none;
   
@@ -120,7 +120,7 @@ border: solid 1px #0066cc;
 	</br>
 	<div class="social-icons">
   <a href="#"  title="facebook"> 
-    <i class="fa fa-employe" aria-hidden="true"></i>
+    <i class="fa fa-envelope" aria-hidden="true"></i>
   </a>
   <a href="#" title="youtube">
     <i class="fa fa-youtube-square" aria-hidden="true"></i>
