--- a/index.html
+++ b/index.html
@@ -119,10 +119,10 @@ border: solid 1px #0066cc;
 	<h1 class="ft">Halo... Selamat datang!</h1>
 	</br>
 	<div class="social-icons">
-  <a href="#"  title="facebook"> 
+  <a href="mailto:officialitsgameman@gmail.com"  title="email"> 
     <i class="fa fa-envelope" aria-hidden="true"></i>
   </a>
-  <a href="#" title="youtube">
+  <a href="https://www.youtube.com/@itsgamemanofficial" title="youtube">
     <i class="fa fa-youtube-square" aria-hidden="true"></i>
   </a>
 </div>
