--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@ border: solid 1px #0066cc;
       .ft {
            font-family: myFirstFont;
            color: #0471FF;
+           font-size: 22px;
        }
        .ft2 {
            font-family: myFont;
@@ -71,7 +72,7 @@ border: solid 1px #0066cc;
        .ft3 {
            font-family: myFont;
            color: #ffffff;
-           font-size: 8px;
+           font-size: 10px;
        }
        .social-icons{
 	padding:30px;
@@ -110,11 +111,21 @@ border: solid 1px #0066cc;
   transition: all 200ms ease-in;
   transform: scale(1.5);
 }
+.card {
+  box-shadow: 0 8px 16px 0 rgba(255,255,255,0.2);
+  transition: 10s;
+  width: 100%;
+  border-radius: 10px;
+}
+.container {
+  padding: 2px 16px;
+}
      </style>
 </head>
 <body style="background:#0D1117;">
+	</br>
 	<center>
-    <img src="images/logo.png" alt="Its Game Man Logo" style="width:80%;">
+    <img src="images/logo.png" alt="Its Game Man Logo" style="width:60%;">
     </br>
 	<h1 class="ft">Halo... Selamat datang!</h1>
 	</br>
@@ -151,7 +162,19 @@ border: solid 1px #0066cc;
 	</br>
 	</br>
 	</br>
-	<h4 class="ft3">Copyright 2024 by Its Game Man</h4>
 	</center>
+	<div class="col-md-6">
+	<div class="card">
+  <div class="container">
+    <h4 style="color:#ffffff;font-size: 16px;"><b>Ingpooo</b></h4> 
+    <p style="color:#ffffff;">Terima jasa pembuatan CV, Portofolio, Portal Pribadi online juga.Yang berminat bisa dm akun Tiktok atau Email ya.</p> 
+   </div>
+</div>
+</div>
+   </br>
+   </br>
+<center>
+   		<h4 class="ft3">Copyright 2024 by Its Game Man</h4>
+   </center>
 </body>
 </html>
