--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ border: solid 1px #0066cc;
        .ft3 {
            font-family: myFont;
            color: #ffffff;
-           font-size: 10px;
+           font-size: 12px;
        }
        .social-icons{
 	padding:30px;
@@ -128,8 +128,9 @@ border: solid 1px #0066cc;
     <img src="images/logo.png" alt="Its Game Man Logo" style="width:60%;">
     </br>
 	<h1 class="ft">Halo... Selamat datang!</h1>
-	</br>
+	
 	<div class="social-icons">
+		<a href="mailto:officialitsgameman@gmail.com"><img src="images/tiktok.png" alt="Its Game Man TikTok" style="width:40%;"></a>
   <a href="mailto:officialitsgameman@gmail.com"  title="email"> 
     <i class="fa fa-envelope" aria-hidden="true"></i>
   </a>
@@ -137,7 +138,7 @@ border: solid 1px #0066cc;
     <i class="fa fa-youtube-square" aria-hidden="true"></i>
   </a>
 </div>
-	</br>
+	
 	<h2 class="ft2">Join Airdrop Telegram</h2>
 	</br>
 	<a href="https://t.me/hamsteR_kombat_bot/start?startapp=kentId666159099">
@@ -176,5 +177,6 @@ border: solid 1px #0066cc;
 <center>
    		<h4 class="ft3">Copyright 2024 by Its Game Man</h4>
    </center>
+   </br>
 </body>
 </html>
