--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ border: solid 1px #0066cc;
 	<h1 class="ft">Halo... Selamat datang!</h1>
 	
 	<div class="social-icons">
-		<a href="mailto:officialitsgameman@gmail.com"><img src="images/tiktok.png" alt="Its Game Man TikTok" style="width:40%;"></a>
+		<a href="https://www.tiktok.com/@itsgameman"><img src="images/tiktok.png" alt="Its Game Man TikTok" style="width:40%;"></a>
   <a href="mailto:officialitsgameman@gmail.com"  title="email"> 
     <i class="fa fa-envelope" aria-hidden="true"></i>
   </a>
@@ -164,7 +164,7 @@ border: solid 1px #0066cc;
 	</br>
 	</br>
 	</center>
-	<div class="col-md-6">
+	<div class="col-md-12">
 	<div class="card">
   <div class="container">
     <h4 style="color:#ffffff;font-size: 16px;"><b>Ingpooo</b></h4> 
